Addtraining yms lisätty

--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "@emotion/react": "^11.11.1",
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.154",
     "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@mui/x-date-pickers": "^6.18.2",
     "ag-grid-community": "^30.2.1",
     "ag-grid-react": "^30.2.1",
+    "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
